# formula-strats

./: .gitignore  README.md
api/: .dockerignore  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  livegpt.py  main.py  pyproject.toml
api/formulastrats/: .env
api/formulastrats/app/: crud.py  database.py  f1_websocket_client.py  main.py  models.py
api/live/: .env  Dockerfile  live.py  main.py  runner.py  schedule.py
api/simulator/: main.py  transform_data.py
app/: app.css  root.tsx
app/components/: driver-timeline.tsx  footer.tsx  lap-chart.tsx  settings.tsx
app/routes/: home.tsx
app/services/: OpenF1Service.ts
app/types/: driver-interval.ts  driver.ts  interval.ts  lap.ts  meeting.ts
app/utils/: logger.ts
backend/: docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  redis.conf
backend/formulastrats/app/: Dockerfile  main.py
backend/services/api/: Dockerfile  main.py
backend/services/ingestor/: Dockerfile  live.py  runner.py
backend/simulator/: clean_script.py
frontend/: .env.example  .gitignore  package-lock.json  package.json
frontend/app/: app.css  root.tsx
frontend/app/components/: footer.tsx  lap-chart.tsx  nav.tsx  number-input.tsx  race-control-messages.tsx  rankings.tsx  settings.tsx  timeline.tsx  weather-charts.tsx
frontend/app/context/: settings-context.tsx
frontend/app/data/: circuit-data.ts
frontend/app/hooks/: useSSE.ts
frontend/app/routes/: home.tsx
frontend/app/store/: f1-store.ts
web/: package-lock.json  package.json
web/app/: app.css  root.tsx
(+19 files in other folders)
