[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.116.1",
    "icalendar>=6.3.1",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
